--- a/main/plugins/org.talend.hadoop.distribution.mapr600/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr600/plugin.xml
@@ -697,9 +697,15 @@
             <library id="jackson-mapper-asl-1.9.14-TALEND.jar" />
             <library id="htrace-core-3.1.0-incubating.jar" />
             <library id="avro-1.7.7.jar" />
+         </libraryNeededGroup>
+
+        <libraryNeededGroup
+           description="The avro Reduce libraries of MapR 6.0.0"
+           id="MAPREDUCE-AVRO-LIB-MAPR600"
+           name="MAPREDUCE-AVRO-LIB-MAPR600">
             <library id="avro-mapred-1.7.7-hadoop2.jar"/>
          </libraryNeededGroup>
-         
+
          <!-- Spark2 DynamoDB group MRREQUIRED -->
         <libraryNeededGroup
                 description="Spark DynamoDB libraries for MapR 6.0.0 that are MRREQUIRED"
