--- a/main/plugins/org.talend.hadoop.distribution.emr450/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr450/plugin.xml
@@ -433,7 +433,6 @@
              <library id="jetty-util-emr450-latest"/>
              <library id="emr-metrics-client-emr450-latest"/>
              <library id="htrace-core-3.1.0-incubating.jar"/>
-             <library id="avro-mapred-emr450-latest"/>
         </libraryNeededGroup>
         
         <!-- Map/Reduce parquet group MRREQUIRED -->
@@ -444,6 +443,14 @@
              <library id="parquet-hadoop-bundle-1.6.0.jar" />
              <library id="snappy-java-1.0.5.jar" />
              <library id="jodd-core-3.5.2.jar" />
+        </libraryNeededGroup>
+
+        <!-- Map/Reduce avro group MRREQUIRED -->
+        <libraryNeededGroup
+                description="Map/Reduce avro libraries for EMR 4.5.0 that are MRREQUIRED"
+                id="MAPREDUCE-AVRO-LIB-MRREQUIRED-EMR_4_5_0"
+                name="MAPREDUCE-AVRO-LIB-MRREQUIRED-EMR_4_5_0">
+             <library id="avro-mapred-emr450-latest"/>
         </libraryNeededGroup>
         
         <!-- Pig group -->
