--- a/main/plugins/org.talend.hadoop.distribution.mapr510/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr510/plugin.xml
@@ -426,8 +426,15 @@
             <library id="jackson-mapper-asl-1.9.14-TALEND.jar" />
             <library id="htrace-core-3.1.0-incubating.jar" />
             <library id="avro-1.7.5.jar" />
+         </libraryNeededGroup>
+         
+        <libraryNeededGroup
+           description="Map Reduce avro libraries of MapR 5.1.0"
+           id="MAPREDUCE-AVRO-LIB-MAPR510"
+           name="MAPREDUCE-AVRO-LIB-MAPR510">
             <library id="avro-mapred-1.7.5.jar"/>
          </libraryNeededGroup>
+         
 
          <libraryNeededGroup
            description="The lastest Spark libraries of MapR 5.1.0"
