--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
@@ -6,6 +6,15 @@ LONG_NAME=Create a connection to HDFS
 
 VERSION.NAME=Version
 
+SCHEME.NAME=Scheme
+SCHEME.ITEM.HDFS=HDFS
+SCHEME.ITEM.ADLS=ADLS
+SCHEME.ITEM.WebHDFS=WebHDFS
+
+ADLS_CLIENT_ID.NAME=Client ID
+ADLS_AUTH_TOKEN_ENDPOINT.NAME=Token Endpoint
+ADLS_CLIENT_KEY.NAME=Client Key
+
 DISTRIBUTION.NAME=Distribution
 DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
 DISTRIBUTION.ITEM.CLOUDERA=Cloudera
