--- a/main/plugins/org.talend.hadoop.distribution.cdh5120/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh5120/plugin.xml
@@ -1328,6 +1328,7 @@
                 <library id="azure-data-lake-store-sdk-2.1.4.jar" />
                 <library id="azure-common-1.7.1.jar"/>
                 <library id="microsoft-windowsazure-storage-sdk-0.6.0.jar"/>
+                <library id="jackson-core-2.6.5.jar"/>
         </libraryNeededGroup>
 
         <!-- Pig S3 group -->
@@ -1454,6 +1455,15 @@
             <library id="jackson-databind-2.2.3.jar"/>
             <library id="jackson-core-2.2.3.jar"/>
             <library id="parquet-avro-1.5.0-cdh5.12.1.jar"/>
+        </libraryNeededGroup>
+        
+        <!-- WebHDFS -->
+        <libraryNeededGroup
+                description="Librairies for WebHDFS"
+                id="WEBHDFS-LIB-CDH_5_12"
+                name="WEBHDFS-LIB-CDH_5_12">
+            <library id="commons-io-2.4.jar"/>
+            <library id="jersey-client-1.9.jar"/>
         </libraryNeededGroup>
     </extension>
     <extension
