feat(TBD-6728): Refactor HDFS connection for cloudera distributions

--- a/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
@@ -969,6 +969,16 @@
             <library id="jackson-core-2.2.3.jar"/>
             <library id="parquet-avro-cdh5.7.0"/>
         </libraryNeededGroup>
+        
+        <!-- WebHDFS -->
+        <libraryNeededGroup
+                description="Librairies for WebHDFS"
+                id="WEBHDFS-LIB-CDH_5_7"
+                name="WEBHDFS-LIB-CDH_5_7">
+            <library id="commons-io-2.4.jar"/>
+            <library id="jersey-client-1.9.jar"/>
+            <library id="jetty-util-6.1.26.jar"/>
+        </libraryNeededGroup>
     </extension>
     <extension
           point="org.talend.core.runtime.classloader_provider">
