--- a/main/plugins/org.talend.hadoop.distribution.cdh580/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh580/plugin.xml
@@ -855,7 +855,7 @@
                 name="SPARK-AZURE-LIB-MRREQUIRED-CDH_5_8">
                 <library id="azure-storage-2.2.0"/>
                 <library id="hadoop-azure-2.7.4"/>
-                <library id="jetty-util-6.1.26"/>
+                <library id="jetty-util-6.1.26.jar"/>
         </libraryNeededGroup>
 
         <!-- Pig S3 group -->
@@ -973,6 +973,16 @@
             <library id="jackson-databind-2.2.3.jar"/>
             <library id="jackson-core-2.2.3.jar"/>
             <library id="parquet-avro-cdh5.7.0"/>
+        </libraryNeededGroup>
+        
+        <!-- WebHDFS -->
+        <libraryNeededGroup
+                description="Librairies for WebHDFS"
+                id="WEBHDFS-LIB-CDH_5_8"
+                name="WEBHDFS-LIB-CDH_5_8">
+            <library id="commons-io-2.4.jar"/>
+            <library id="jersey-client-1.9.jar"/>
+            <library id="jetty-util-6.1.26.jar"/>
         </libraryNeededGroup>
     </extension>
     <extension
