feat(TBD-6728): Refactor HDFS connection for hdp distributions

--- a/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
@@ -1053,6 +1053,14 @@
             <library id="parquet-hadoop-bundle-1.6.0.jar" />
             <library id="parquet-avro-1.4.1.jar"/>
         </libraryNeededGroup>
+        
+        <!-- WebHDFS -->
+        <libraryNeededGroup
+                description="Librairies for WebHDFS"
+                id="WEBHDFS-LIB-HDP_2_4"
+                name="WEBHDFS-LIB-HDP_2_4">
+            <library id="jersey-client-1.9.jar"/>
+        </libraryNeededGroup>
              
     </extension>
     <extension
