feat(TBD-6728): Refactor HDFS connection for EMR distributions

--- a/main/plugins/org.talend.hadoop.distribution.emr500/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr500/plugin.xml
@@ -1306,6 +1306,14 @@
                 <library id="jetty-util-6.1.26"/>
         </libraryNeededGroup> -->
         
+        <!-- WebHDFS -->
+        <libraryNeededGroup
+                description="Librairies for WebHDFS"
+                id="WEBHDFS-LIB-EMR_5_0_0_LATEST"
+                name="WEBHDFS-LIB-EMR_5_0_0_LATEST">
+            <library id="jersey-client-1.9.jar"/>
+        </libraryNeededGroup>
+        
     </extension>
     
     <extension
