--- a/main/plugins/org.talend.hadoop.distribution.emr550/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr550/plugin.xml
@@ -2150,6 +2150,14 @@
                 <library id="hadoop-azure-2.7.4"/>
                 <library id="jetty-util-6.1.26"/>
         </libraryNeededGroup> -->
+        
+        <!-- WebHDFS -->
+        <libraryNeededGroup
+                description="Librairies for WebHDFS"
+                id="WEBHDFS-LIB-EMR_5_5_0_LATEST"
+                name="WEBHDFS-LIB-EMR_5_5_0_LATEST">
+            <library id="jersey-client-1.9.jar"/>
+        </libraryNeededGroup>
 
     </extension>
 
