--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
@@ -11,6 +11,8 @@ SCHEME.ITEM.HDFS=HDFS
 SCHEME.ITEM.ADLS=ADLS
 SCHEME.ITEM.WebHDFS=WebHDFS
 
+ADLS_FS_DEFAULT_NAME.NAME=URI
+ADLS.NAME=Azure Data Lake Store
 ADLS_CLIENT_ID.NAME=Client ID
 ADLS_AUTH_TOKEN_ENDPOINT.NAME=Token Endpoint
 ADLS_CLIENT_KEY.NAME=Client Key
