--- a/main/plugins/org.talend.designer.components.bigdata/components/tMapROjaiOutput/tMapROjaiOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMapROjaiOutput/tMapROjaiOutput_messages.properties
@@ -56,6 +56,8 @@ KERBEROS_PASSWORD.NAME=Kerberos Password
 REJECT.LINK=Rejects
 REJECT.MENU=Rejects
 
+VERSION.NAME=Version
+
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MAPROJAI_6_0=MapROjai 6.0
 DB_VERSION.ITEM.MAPROJAI_5_2=MapROjai 5.2
