--- a/main/plugins/org.talend.hadoop.distribution.mapr600/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr600/plugin.xml
@@ -366,6 +366,152 @@
             mvn_uri="mvn:org.talend.libraries/antlr4-runtime-4.5.3/6.0.0" >
         </libraryNeeded>
         
+        <!-- OJAI -->
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="ojai-2.0-mapr-1710.jar" 
+            name="ojai-2.0-mapr-1710.jar"
+            mvn_uri="mvn:org.talend.libraries/ojai-2.0-mapr-1710/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="mapr-ojai-driver-6.0.0-mapr.jar" 
+            name="mapr-ojai-driver-6.0.0-mapr.jar"
+            mvn_uri="mvn:org.talend.libraries/mapr-ojai-driver-6.0.0-mapr/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="json-20080701.jar" 
+            name="json-20080701.jar"
+            mvn_uri="mvn:org.talend.libraries/json-20080701/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="slf4j-api-1.7.10.jar" 
+            name="slf4j-api-1.7.10.jar"
+            mvn_uri="mvn:org.talend.libraries/slf4j-api-1.7.10/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="jackson-databind-2.9.4.jar" 
+            name="jackson-databind-2.9.4.jar"
+            mvn_uri="mvn:org.talend.libraries/jackson-databind-2.9.4/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="jackson-annotations-2.9.4.jar" 
+            name="jackson-annotations-2.9.4.jar"
+            mvn_uri="mvn:org.talend.libraries/jackson-annotations-2.9.4/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="jackson-core-2.9.4.jar" 
+            name="jackson-core-2.9.4.jar"
+            mvn_uri="mvn:org.talend.libraries/jackson-core-2.9.4/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="xercesImpl-2.9.1.jar" 
+            name="xercesImpl-2.9.1.jar"
+            mvn_uri="mvn:org.talend.libraries/xercesImpl-2.9.1/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="xml-apis-1.3.04.jar" 
+            name="xml-apis-1.3.04.jar"
+            mvn_uri="mvn:org.talend.libraries/xml-apis-1.3.04/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="xalan-2.7.1.jar" 
+            name="xalan-2.7.1.jar"
+            mvn_uri="mvn:org.talend.libraries/xalan-2.7.1/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="serializer-2.7.1.jar" 
+            name="serializer-2.7.1.jar"
+            mvn_uri="mvn:org.talend.libraries/serializer-2.7.1/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="xmlenc-0.52.jar" 
+            name="xmlenc-0.52.jar"
+            mvn_uri="mvn:org.talend.libraries/xmlenc-0.52/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="commons-net-3.1.jar" 
+            name="commons-net-3.1.jar"
+            mvn_uri="mvn:org.talend.libraries/commons-net-3.1/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="commons-digester-1.8.jar" 
+            name="commons-digester-1.8.jar"
+            mvn_uri="mvn:org.talend.libraries/commons-digester-1.8/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="commons-beanutils-1.7.0.jar" 
+            name="commons-beanutils-1.7.0.jar"
+            mvn_uri="mvn:org.talend.libraries/commons-beanutils-1.7.0/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="commons-beanutils-core-1.8.0.jar" 
+            name="commons-beanutils-core-1.8.0.jar"
+            mvn_uri="mvn:org.talend.libraries/commons-beanutils-core-1.8.0/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="slf4j-log4j12-1.7.10.jar" 
+            name="slf4j-log4j12-1.7.10.jar"
+            mvn_uri="mvn:org.talend.libraries/slf4j-log4j12-1.7.10/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="jackson-core-asl-1.9.14-TALEND.jar" 
+            name="jackson-core-asl-1.9.14-TALEND.jar"
+            mvn_uri="mvn:org.talend.libraries/jackson-core-asl-1.9.14-TALEND/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="jackson-mapper-asl-1.9.14-TALEND.jar" 
+            name="jackson-mapper-asl-1.9.14-TALEND.jar"
+            mvn_uri="mvn:org.talend.libraries/jackson-mapper-asl-1.9.14-TALEND/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="gson-2.2.4.jar" 
+            name="gson-2.2.4.jar"
+            mvn_uri="mvn:org.talend.libraries/gson-2.2.4/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="curator-recipes-2.7.1.jar" 
+            name="curator-recipes-2.7.1.jar"
+            mvn_uri="mvn:org.talend.libraries/curator-recipes-2.7.1/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="htrace-core-3.1.0-incubating.jar" 
+            name="htrace-core-3.1.0-incubating.jar"
+            mvn_uri="mvn:org.talend.libraries/htrace-core-3.1.0-incubating/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="commons-compress-1.4.1.jar" 
+            name="commons-compress-1.4.1.jar"
+            mvn_uri="mvn:org.talend.libraries/commons-compress-1.4.1/6.0.0">
+        </libraryNeeded> 
+        <libraryNeeded 
+            context="plugin:org.talend.libraries.hadoop.mapr.6.0.0" 
+            id="xz-1.0.jar" 
+            name="xz-1.0.jar"
+            mvn_uri="mvn:org.talend.libraries/xz-1.0/6.0.0">
+        </libraryNeeded> 
+        
         <!-- Azure -->
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.0.0" 
         	id="azure-storage-2.0.0.jar" 
@@ -579,6 +725,58 @@
             <library id="avro-1.7.7.jar" />
         </libraryNeededGroup>
  
+        <libraryNeededGroup
+                description="OJAI libraries for MapR 6.0.0"
+                id="OJAI-LIB-MAPR600"
+                name="OJAI-LIB-MAPR600">
+            <library id="ojai-2.0-mapr-1710.jar" />
+            <library id="mapr-ojai-driver-6.0.0-mapr.jar" />
+            <library id="maprdb-6.0.0-mapr.jar" />
+            <library id="maprfs-6.0.0-mapr.jar" />
+            <library id="hadoop-auth-2.7.0-mapr-1710.jar" />
+            <library id="hadoop-common-2.7.0-mapr-1710.jar" />
+            <library id="json-20080701.jar" />
+            
+            <!-- common part -->
+            <library id="log4j-1.2.17.jar" />
+            <library id="slf4j-api-1.7.10.jar" />
+            <library id="guava-14.0.1.jar" />
+            <library id="commons-logging-1.1.3.jar" />
+            <library id="commons-collections-3.2.2.jar" />
+            <library id="protobuf-java-2.5.0.jar" />
+            <library id="commons-configuration-1.6.jar" />
+            <library id="commons-lang-2.6.jar" />
+            <library id="zookeeper-3.4.5-mapr-1710.jar" /><!--zookeeper-3.4.5-mapr-1503.jar -->
+            <library id="antlr4-runtime-4.5.3.jar" /> <!--antlr4-runtime-4.5.jar-->
+            <library id="jackson-databind-2.9.4.jar" />
+            <library id="jackson-annotations-2.9.4.jar" /><!-- is it really needed? -->
+            <library id="jackson-core-2.9.4.jar" />
+            <library id="curator-framework-2.7.1.jar" />
+            <library id="xercesImpl-2.9.1.jar" />
+            <library id="xml-apis-1.3.04.jar" />
+            <library id="xalan-2.7.1.jar" />
+            <library id="serializer-2.7.1.jar" />
+            <library id="commons-cli-1.2.jar" />
+            <library id="commons-math3-3.1.1.jar" />
+            <library id="xmlenc-0.52.jar" />
+            <library id="commons-httpclient-3.1.jar" />
+            <library id="commons-codec-1.10.jar" /><!-- commons-codec-1.4-->
+            <library id="commons-io-2.4.jar" />
+            <library id="commons-net-3.1.jar" />
+            <library id="commons-digester-1.8.jar" />
+            <library id="commons-beanutils-1.7.0.jar" />
+            <library id="commons-beanutils-core-1.8.0.jar" />
+            <library id="slf4j-log4j12-1.7.10.jar" />
+            <library id="jackson-core-asl-1.9.14-TALEND.jar" />
+            <library id="jackson-mapper-asl-1.9.14-TALEND.jar" />
+            <library id="gson-2.2.4.jar" />
+            <library id="curator-client-2.7.1.jar" />
+            <library id="curator-recipes-2.7.1.jar" />
+            <library id="htrace-core-3.1.0-incubating.jar" />
+            <library id="commons-compress-1.4.1.jar" />
+            <library id="xz-1.0.jar" />
+        </libraryNeededGroup>
+
          <libraryNeededGroup
               description="The lastest HDFS libraries of MapR 6.0.0"
               id="HDFS-LIB-MAPR600"
