PARENT_NODE_PATH fixed. Xml cleaned

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMapROjaiInput/tMapROjaiInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMapROjaiInput/tMapROjaiInput_messages.properties
@@ -1,30 +1,17 @@
-HELP=org.talend.help.tMapRDBInput
-LONG_NAME=Reads a MapRDB table and extracts fields from MapRDB
+HELP=org.talend.help.tMapROjaiInput
+LONG_NAME=Reads a MapRDB JSON table and extracts JSON fields from MapRDB
 
 PROPERTY.NAME=Property Type
 TABLE.NAME=Table name
 MAPPING.NAME=Mapping
 MAPPING.ITEM.COLUMN=Column
-MAPPING.ITEM.FAMILY_COLUMN=Column family
 NB_LINE.NAME=Number of line
 
 VERSION.NAME=Version
 
-RETRIEVE_TIMESTAMP.NAME=Retrieve timestamps
-TIMESTAMP_SOURCE_COLUMN.NAME=from Hbase column
-TIMESTAMP_COLUMN.NAME=to Output column
-
-SET_TABLE_NS_MAPPING.NAME=Set table namespace mapping
-TABLE_NS_MAPPING.NAME=Table Namespace mappings
-
 FIELDS.NAME=Fields to select (space as delimiter)
 QUERY.NAME=Query ('where' clause)
 RESTRICT_PARTIAL_SORTS.NAME=Restrict partial sorts with Secondary Indexes
-
-DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.MAPROJAI_6_0=MapROjai 6.0
-DB_VERSION.ITEM.MAPROJAI_5_2=MapROjai 5.2
-DB_VERSION.ITEM.MAPROJAI_5_1=MapROjai 5.1
 
 CONNECTION.NAME=Connection
 USE_KRB.NAME=Use kerberos authentication
