--- a/main/plugins/org.talend.designer.components.bigdata/components/tMapROjaiOutput/tMapROjaiOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMapROjaiOutput/tMapROjaiOutput_messages.properties
@@ -1,5 +1,6 @@
 #
 #Mon Apr 12 14:26:42 CEST 2010
+HELP=org.talend.help.tMapROjaiOutput
 
 DATA_ACTION.ITEM.DELETE=Delete
 DATA_ACTION.ITEM.INSERT=Insert
@@ -57,8 +58,3 @@ REJECT.LINK=Rejects
 REJECT.MENU=Rejects
 
 VERSION.NAME=Version
-
-DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.MAPROJAI_6_0=MapROjai 6.0
-DB_VERSION.ITEM.MAPROJAI_5_2=MapROjai 5.2
-DB_VERSION.ITEM.MAPROJAI_5_1=MapROjai 5.1
