code review implementation

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMapROjaiInput/tMapROjaiInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMapROjaiInput/tMapROjaiInput_messages.properties
@@ -5,6 +5,7 @@ PROPERTY.NAME=Property Type
 TABLE.NAME=Table name
 MAPPING.NAME=Mapping
 MAPPING.ITEM.COLUMN=Column
+MAPPING.ITEM.PARENT_FIELD_PATH=Parent field path
 NB_LINE.NAME=Number of line
 
 VERSION.NAME=Version
