--- a/main/plugins/org.talend.hadoop.distribution.databricks/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.databricks/plugin.xml
@@ -5,13 +5,18 @@
          point="org.talend.core.runtime.librariesNeeded">
 
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.qubole"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="talend-bigdata-launcher-1.2.2-20180101.jar"
             name="talend-bigdata-launcher-1.2.2-20180101.jar"
             mvn_uri="mvn:org.talend.libraries/talend-bigdata-launcher-1.2.2-20180101/6.0.0">
         </libraryNeeded>
                              
          <!--  -->
+         <libraryNeeded 
+         	context="plugin:org.talend.hadoop.distribution.databricks" 
+         	id="commons-codec-1.10.jar" 
+         	name="commons-codec-1.10.jar" 
+         	mvn_uri="mvn:org.talend.libraries/commons-codec-1.10/6.0.0"/>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.databricks"
             id="commons-lang-2.6.jar"
@@ -62,9 +67,21 @@
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.databricks"
+            id="spark-catalyst_2.11-2.2.0.jar"
+            name="spark-catalyst_2.11-2.2.0.jar"
+            mvn_uri="mvn:org.talend.libraries/spark-catalyst_2.11-2.2.0/6.0.0">
+        </libraryNeeded>
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-core_2.11-2.2.0.jar"
             name="spark-core_2.11-2.2.0.jar"
             mvn_uri="mvn:org.talend.libraries/spark-core_2.11-2.2.0/6.0.0">
+        </libraryNeeded>
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.databricks"
+            id="spark-graphx_2.11-2.2.0.jar"
+            name="spark-graphx_2.11-2.2.0.jar"
+            mvn_uri="mvn:org.talend.libraries/spark-graphx_2.11-2.2.0/6.0.0">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.databricks"
@@ -74,25 +91,39 @@
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.databricks"
+            id="spark-network-common_2.11-2.2.0.jar"
+            name="spark-network-common_2.11-2.2.0.jar"
+            mvn_uri="mvn:org.talend.libraries/spark-network-common_2.11-2.2.0/6.0.0">
+        </libraryNeeded>
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-sql_2.11-2.2.0.jar"
             name="spark-sql_2.11-2.2.0.jar"
             mvn_uri="mvn:org.talend.libraries/spark-sql_2.11-2.2.0/6.0.0">
         </libraryNeeded>
         
+        <libraryNeeded
+            context="Third party library to connect to Windows Azure"
+            id="azure-storage-5.0.0.jar"
+            name="azure-storage-5.0.0.jar"
+            mvn_uri="mvn:org.talend.libraries/azure-storage-5.0.0/6.0.0">
+        </libraryNeeded>
+        
         <!-- Big Data launcher group -->
         <libraryNeededGroup
-                description="Big Data launcher libraries for Qubole"
-                id="BIGDATA-LAUNCHER-LIB-QUBOLE"
-                name="BIGDATA-LAUNCHER-LIB-QUBOLE "  >
+                description="Big Data launcher libraries for Databricks"
+                id="BIGDATA-LAUNCHER-LIB-DATABRICKS"
+                name="BIGDATA-LAUNCHER-LIB-DATABRICKS"  >
 			<library id="talend-bigdata-launcher-1.2.1-20170511" />
-
         </libraryNeededGroup>
         
         <!-- Spark group -->
         <libraryNeededGroup
                 description="SPARK libraries for Databricks"
                 id="SPARK-LIB-MRREQUIRED-DATABRICKS"
-                name="SPARK-LIB-MRREQUIRED-DATABRICKS"  >
+                name="SPARK-LIB-MRREQUIRED-DATABRICKS">
+             <library id="azure-storage-5.0.0.jar"/>
+             <library id="commons-codec-1.10.jar"/>
              <library id="commons-lang-2.6.jar"/>
              <library id="commons-lang3-3.5.jar"/>
              <library id="hadoop-common-2.7.3.jar"/>
@@ -101,9 +132,12 @@
              <library id="scala-library-2.11.8.jar"/>
              <library id="scala-reflect-2.11.8.jar"/>
              <library id="slf4j-api-1.7.16.jar"/>
+             <library id="spark-catalyst_2.11-2.2.0.jar"/>
              <library id="spark-core_2.11-2.2.0.jar"/>
+             <library id="spark-graphx_2.11-2.2.0.jar"/>
              <library id="spark-mllib-local_2.11-2.2.0.jar"/>
              <library id="spark-sql_2.11-2.2.0.jar"/>
+             <library id="spark-network-common_2.11-2.2.0.jar"/>
         </libraryNeededGroup>
         
    </extension>
