--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulk/tCassandraOutputBulk_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulk/tCassandraOutputBulk_messages.properties
@@ -4,7 +4,7 @@ SCHEMA.NAME=Schema
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.x/2.1.x
+DB_VERSION.ITEM.CASSANDRA_2_0_0=CASSANDRA_2_0_0=Cassandra 2.0.x (Deprecated)/2.1.x
 DB_VERSION.ITEM.CASSANDRA_2_1=Cassandra 2.1.x
 DB_VERSION.ITEM.CASSANDRA_2_2=Cassandra 2.2.x
 DB_VERSION.ITEM.CASSANDRA_3_0=Cassandra 3.x/3.0.x
