--- a/main/plugins/org.talend.hadoop.distribution.databricks/build.properties
+++ b/main/plugins/org.talend.hadoop.distribution.databricks/build.properties
@@ -3,4 +3,4 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               pluginold.xml
+               plugin.xml
