--- a/main/plugins/org.talend.hadoop.distribution.databricks/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.databricks/plugin.xml
@@ -6,9 +6,9 @@
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.databricks"
-            id="talend-bigdata-launcher-1.2.3-20180531.jar"
-            name="talend-bigdata-launcher-1.2.3-20180531.jar"
-            mvn_uri="mvn:org.talend.libraries/talend-bigdata-launcher-1.2.3-20180531/6.0.0">
+            id="talend-bigdata-launcher-platform-1.2.3-20180501.jar"
+            name="talend-bigdata-launcher-platform-1.2.3-20180501.jar"
+            mvn_uri="mvn:org.talend.libraries/talend-bigdata-launcher-platform-1.2.3-20180501/6.0.0">
         </libraryNeeded>
                              
          <!--  -->
@@ -29,6 +29,13 @@
             name="commons-lang3-3.5.jar"
             mvn_uri="mvn:org.talend.libraries/commons-lang3-3.5/6.0.0">
         </libraryNeeded>
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.databricks"
+            id="commons-logging-1.2.jar"
+            name="commons-logging-1.2.jar"
+            mvn_uri="mvn:org.talend.libraries/commons-logging-1.2/6.0.0">
+        </libraryNeeded>
+        
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.databricks"
             id="hadoop-common-2.7.3.jar"
@@ -69,43 +76,43 @@
             context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-catalyst_2.11-2.2.1.jar"
             name="spark-catalyst_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-catalyst_2.11-2.2.1/6.0.0">
+            mvn_uri="mvn:org.talend.libraries/spark-catalyst/2.11-2.2.1">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-core_2.11-2.2.1.jar"
             name="spark-core_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-core_2.11-2.2.1/6.0.0">
+            mvn_uri="mvn:org.talend.libraries/spark-core/2.11-2.2.1">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-graphx_2.11-2.2.1.jar"
             name="spark-graphx_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-graphx_2.11-2.2.1/6.0.0">
+            mvn_uri="mvn:org.talend.libraries/spark-graphx/2.11-2.2.1">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-hive_2.11-2.2.1.jar"
             name="spark-hive_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-hive_2.11-2.2.1/6.0.0">
+            mvn_uri="mvn:org.talend.libraries/spark-hive/2.11-2.2.1">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-mllib-local_2.11-2.2.1.jar"
             name="spark-mllib-local_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-mllib-local_2.11-2.2.1/6.0.0">
+            mvn_uri="mvn:org.talend.libraries/spark-mllib-local/2.11-2.2.1">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-network-common_2.11-2.2.1.jar"
             name="spark-network-common_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-network-common_2.11-2.2.1/6.0.0">
+            mvn_uri="mvn:org.talend.libraries/spark-network-common/2.11-2.2.1">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-sql_2.11-2.2.1.jar"
             name="spark-sql_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-sql_2.11-2.2.1/6.0.0">
+            mvn_uri="mvn:org.talend.libraries/spark-sql/2.11-2.2.1">
         </libraryNeeded>
         
         <libraryNeeded
@@ -162,7 +169,7 @@
                 description="Big Data launcher libraries for Databricks"
                 id="BIGDATA-LAUNCHER-LIB-DATABRICKS"
                 name="BIGDATA-LAUNCHER-LIB-DATABRICKS"  >
-			<library id="talend-bigdata-launcher-1.2.3-20180531" />
+			<library id="talend-bigdata-launcher-1.2.3-20180531.jar" />
         </libraryNeededGroup>
         
         <!-- Spark group -->
@@ -174,9 +181,10 @@
              <library id="commons-codec-1.10.jar"/>
              <library id="commons-lang-2.6.jar"/>
              <library id="commons-lang3-3.5.jar"/>
+             <library id="commons-logging-1.2.jar"/>
              <library id="cxf-rt-rs-client-3.2.4.jar"/>
              <library id="cxf-bundle-jaxrs-2.7.18.jar"/>
-             <!--<library id="hadoop-common-2.7.3.jar"/>-->
+             <library id="hadoop-common-2.7.3.jar"/>
              <library id="hadoop-mapreduce-client-core-2.7.3.jar"/>
              <library id="kryo-shaded-3.0.3.jar"/>
              <library id="scala-library-2.11.8.jar"/>
@@ -201,6 +209,16 @@
                 name="HIVEONSPARK-LIB-MRREQUIRED-DATABRICKS">
              <library id="spark-hive_2.11-2.2.1.jar"/>
         </libraryNeededGroup>
+        
+        <!-- Spark Azure group -->
+        <libraryNeededGroup
+                description="Hive On SPARK libraries for Databricks"
+                id="SPARK-AZURE-LIB-MRREQUIRED-DATABRICKS"
+                name="SPARK-AZURE-LIB-MRREQUIRED-DATABRICKS">
+             <library id="hadoop-azure-datalake-2.8.1.jar"/>
+             <library id="azure-data-lake-store-sdk-2.3.1.jar"/>            
+        </libraryNeededGroup>
+        
         
    </extension>
    <extension
