--- a/pom.xml
+++ b/pom.xml
@@ -166,7 +166,7 @@
         <module>test/plugins/org.talend.hadoop.distribution.cdh5100.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.cdh5120.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.custom.test</module>
-        <module>main/plugins/org.talend.hadoop.distribution.databricks.test</module>
+        <module>test/plugins/org.talend.hadoop.distribution.databricks.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.dataproc11.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr103.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr240.test</module>
